@@ -1,4 +1,4 @@
-#   Copyright (C) 2003, 2004, 2006, 2008, 2011
+#   Copyright (C) 2003, 2004, 2006, 2008, 2011, 2013
 #    Rocky Bernstein <rocky@gnu.org>
 #
 #   This program is free software: you can redistribute it and/or modify
@@ -18,11 +18,11 @@
 # Things to make the libudf library
 ########################################################
 #
-# From libtool documentation amended with guidance from N. Boullis: 
+# From libtool documentation amended with guidance from N. Boullis:
 #
 #  1. Start with version information of `0:0:0' for each libtool library.
 #
-#  2. It is probably not a good idea to update the version information 
+#  2. It is probably not a good idea to update the version information
 #     several times between public releases, but rather once per public
 #     release. (This seems to be more an aesthetic consideration than
 #     a hard technical one.)
@@ -42,7 +42,7 @@
 
 libudf_la_CURRENT = 1
 libudf_la_REVISION = 0
-libudf_la_AGE = 0
+libudf_la_AGE = 1
 
 EXTRA_DIST = libudf.sym
 
